// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package forward;

option go_package = "github.com/openconfig/kne/proto/forward";

// Forward specific config data for KNE
message ForwardConfig {
  repeated Wire wires = 1;
}

// Wire is a connection between two endpoints intended to forward
// data bidirectionally between them. One of the endpoints must be
// of type Interface.
message Wire {
  // The a endpoint serves as the client endpoint in the bidirectional stream.
  Endpoint a = 1;
  // The z endpoint serves as the server endpoint in the bidirectional stream.
  Endpoint z = 2;
}

message Endpoint {
  oneof endpoint {
    // Interface is a local interface (ex. eth0) on the node.
    Interface interface = 1;
    // LocalNode is a node in the same cluster.
    LocalNode local_node = 2;
    // RemoteNode is a node in a different cluster.
    RemoteNode remote_node = 3;
  }
}

message Interface {
  string name = 1;
  // TODO: Add MTU and other configurable fields.
}

message LocalNode {
  string name = 1;
  string interface = 2;
}

message RemoteNode {
  string addr = 1;
  string interface = 2;
}
